--- a/css/estilos.css
+++ b/css/estilos.css
@@ -69,7 +69,10 @@ nav a:hover {
 	margin: auto;
     border: 10px solid transparent;
     
-	
+}
+#banner img{
+    width: 100%;
+    height: 100%;
 }
 
 #contenido {
@@ -106,7 +109,35 @@ nav a:hover {
 	text-align:justify;
 	font-size: 30;
 }
+#productosNuevos {
+	
+	width: 250px;
+	background: #fff; 
+	margin-top: 10px;
+	
+}
 
+#productosNuevos h3 {
+	font-size: 25px;
+	background:  rgba(11, 48, 97, 0.993);
+	text-align: justify;
+	padding: 10px;
+	color: #fff;
+	
+}
+
+#productosNuevos p{
+	padding: 10px;
+	font-size: 19px;
+	text-align: justify;
+	line-height: 15px;
+
+}
+
+#imgaside {	
+    width: 100%;
+    height: 100%; 
+}
 
 footer {
 	height:  60px;
