--- a/css/estilos.css
+++ b/css/estilos.css
@@ -76,7 +76,7 @@ nav a:hover {
 }
 
 #contenido {
-	float: left;
+	
 	width: 700px;
 	background: #fff;
 	border-radius: 10px;
@@ -91,14 +91,15 @@ nav a:hover {
 	font-size: 40px;
 	padding: 10px;
 	color: #fff;
-	background: rgba(11, 48, 97, 0.993);
-	float: center;
+    background: rgba(11, 48, 97, 0.993);
+    text-align: center;
+	
 	
 	
 }
 
 .articulos img {
-	float: left;
+	
 	margin: 10px;
 }
 
@@ -116,6 +117,16 @@ nav a:hover {
 	margin-top: 10px;
 	
 }
+#productos h1{
+    font-size: 25px;
+	background:  rgba(11, 48, 97, 0.993);
+	text-align: center;
+	padding: 10px;
+	color: #fff;
+
+
+
+}
 
 #productosNuevos h3 {
 	font-size: 25px;
@@ -123,7 +134,14 @@ nav a:hover {
 	text-align: justify;
 	padding: 10px;
 	color: #fff;
-	
+}
+#botones{
+    background-color:  rgba(11, 48, 97, 0.993);
+    
+
+}
+#producto2{
+    float: center;
 }
 
 #productosNuevos p{
