--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,7 +39,7 @@ header h1 {
 
 nav {
 	
-    height: 60px;
+    height: 85px;
     position: sticky;
     top: 1rem;
     background: rgba(11, 48, 97, 0.993);
@@ -58,17 +58,27 @@ nav a{
 	text-decoration: none;
 	padding: 20px;
 }
+nav b{
+	color: #fff;
+	font-size: 20px;
+	
+	font-weight: bold;
+	text-decoration: none;
+	padding: 20px;
+}
 nav o{
     float: right;
     padding: 20px 0px;
 }
 nav a:hover {
-	background:black;
+	background: black;
+}
+nav b:hover	 {
+	background: red;
 }
 #banner {
 	margin: auto;
-    border: 10px solid transparent;
-    
+    border: 10px solid transparent;  
 }
 #banner img{
     width: 100%;
@@ -88,9 +98,23 @@ nav a:hover {
 	font-size: 40px;
 	padding: 10px;
 	color: #fff;
-    background: rgba(11, 48, 97, 0.993);
-    text-align: center;
+	background: rgba(11, 48, 97, 0.993);
+	text-align: center; 
 }
+.articulos h6 {
+	font-size: 40px;
+	padding: 10px;
+	color: #fff;
+	background: rgba(255, 8, 0, 0.993);
+	text-align: center;
+	padding-top: 2rem;
+	margin-top: 0.5rem;
+	margin-left: 10rem;
+	margin-bottom: 0.5rem;
+	margin-right: 10rem;
+}
+
+
 
 .articulos img {	
 	margin: 10px;
@@ -99,10 +123,10 @@ nav a:hover {
 .articulos p {
 	margin-bottom: 10px;
 	margin-top: 10px;
-	line-height: 15px;
-
-	text-align:justify;
-	font-size: 30;
+	
+	line-height: auto;
+	font-size: 25px;
+	text-align: center;
 }
 #productosNuevos {
 	width: 250px;
@@ -112,7 +136,7 @@ nav a:hover {
 #productos h1{
     font-size: 25px;
 	background:  rgba(11, 48, 97, 0.993);
-	text-align: center;
+	
 	padding: 10px;
 	color: #fff;
 }
@@ -127,30 +151,44 @@ nav a:hover {
 #productosNuevos h3 {
 	font-size: 25px;
 	background:  rgba(11, 48, 97, 0.993);
-	text-align: justify;
+	
 	padding: 10px;
 	color: #fff;
 }
 #botones{
     background-color:  rgba(11, 48, 97, 0.993);
-    
-
 }
-#p1{
-    float: center;
-}
-
 #productosNuevos p{
 	padding: 10px;
 	font-size: 19px;
-	text-align: justify;
 	line-height: 15px;
-
+}
+#productoU{
+	text-align: right;
+}
+#productoD{
+	text-align: center;
+}
+#productoT{
+	text-align: left;
 }
 
 #imgaside {	
     width: 100%;
     height: 100%; 
+}
+#jordan1Dior{
+	text-align: center;
+	
+}
+#imgJ{
+	width: 20%;
+	height: 20%;
+	text-align: center;
+
+}
+#productoE{
+	text-align: center;
 }
 
 footer {
