--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,215 +1,21 @@
-* {
-	margin: 0px;
-	padding: 0px;
+body {
+  font-family: sans-serif;
+  text-align: center;
 }
 
-body{
-    background: #F7F9F9;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    
+.contenido {
+  display: inline-block;
+  text-align: start;
 }
 
-#contenedor{	
-	margin: auto;
-	overflow:hidden;	
+meter,
+input[type=range],
+output {
+  display: block;
 }
 
-header {
-	background: rgba(11, 48, 97, 0.993);
-    height: 50px;
-    
-}
-header h1 {
-	color: #fff;
-	font-size: 20px;
-	font-weight: bold;
-	
-	line-height: auto;
-    margin-left: 20px;
-    margin-top: 10px;
-    
-    float: left;
-    
-}
-
-#redes {
-	float: right;
-	line-height: 100px;
-	display: inline-block;
-}
-
-nav {
-	
-    height: 85px;
-    position: sticky;
-    top: 0.1px;
-    background: rgba(11, 48, 97, 0.993);
-}
-
-nav li {
-	list-style: none;
-	display: inline-block;
-	padding: 20px 0px;
-}
-nav a{
-	color: #fff;
-	font-size: 20px;
-	
-	font-weight: bold;
-	text-decoration: none;
-	padding: 20px;
-}
-nav b{
-	color: #fff;
-	font-size: 20px;
-	
-	font-weight: bold;
-	text-decoration: none;
-	padding: 20px;
-}
-nav {
-	color: #fff;
-	font-size: 20px;
-	
-	font-weight: bold;
-	text-decoration: none;
-	padding: 20px;
-}
-nav o{
-    float: right;
-    padding: 20px 0px;
-}
-nav a:hover {
-	background: black;
-}
-nav b:hover	 {
-	background: red;
-}
-#banner {
-	margin: auto;
-    border: 10px solid transparent;  
-}
-#banner img{
-    width: 100%;
-    height: 100%;
-}
-
-#contenido {
-	width: 700px;
-	background: #fff;
-	border-radius: 10px;
-	overflow: hidden;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	margin-right: 10px;
-}
-.articulos h2 {
-	font-size: 40px;
-	padding: 10px;
-	color: #fff;
-	background: rgba(11, 48, 97, 0.993);
-	text-align: center; 
-}
-.articulos h6 {
-	font-size: 40px;
-	padding: 10px;
-	color: #fff;
-	background: rgba(255, 8, 0, 0.993);
-	text-align: center;
-	padding-top: 2rem;
-	margin-top: 0.5rem;
-	margin-left: 10rem;
-	margin-bottom: 0.5rem;
-	margin-right: 10rem;
-}
-
-
-
-.articulos img {	
-	margin: 10px;
-}
-
-.articulos p {
-	margin-bottom: 10px;
-	margin-top: 10px;
-	
-	line-height: auto;
-	font-size: 25px;
-	text-align: center;
-}
-#productosNuevos {
-	width: 250px;
-	background: #fff; 
-	margin-top: 10px;
-}
-#productos h1{
-    font-size: 25px;
-	background:  rgba(11, 48, 97, 0.993);
-	
-	padding: 10px;
-	color: #fff;
-}
-#mapa{
-	text-align: center;
-}
-#mapaText{
-	font-size: 30px;
-	text-align: center;
-}
-
-#productosNuevos h3 {
-	font-size: 25px;
-	background:  rgba(11, 48, 97, 0.993);
-	
-	padding: 10px;
-	color: #fff;
-}
-#botones{
-    background-color:  rgba(11, 48, 97, 0.993);
-}
-#productosNuevos p{
-	padding: 10px;
-	font-size: 19px;
-	line-height: 15px;
-}
-#productoU{
-	text-align: right;
-}
-#productoD{
-	text-align: center;
-}
-#productoT{
-	text-align: left;
-}
-
-#imgaside {	
-    width: 100%;
-    height: 100%; 
-}
-#jordan1Dior{
-	text-align: center;
-	
-}
-#imgJ{
-	width: 20%;
-	height: 20%;
-	text-align: center;
-
-}
-#productoE{
-	text-align: center;
-}
-
-footer {
-	height:  60px;
-	background: rgba(11, 48, 97, 0.993);
-	clear: both;
-}
-
-footer p {
-	font-size: 20px;
-	color: #fff;
-	text-align: center;
-	line-height: 60px;
-	
+mi-footer {
+  display: block;
+  margin: 1rem 0;
+  font-size: small;
 }
