--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  ;
+  text-align: center;
 }
 
 .contenido {
@@ -16,6 +16,6 @@ output {
 
 mi-footer {
   display: block;
-  margin:1rem 0;
+  margin: 1rem 0;
   font-size: small;
 }
