--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,19 @@ body {
 .contenido {
   display: inline-block;
   text-align: start;
+  
+  text-align: center;
+  padding-top: auto;
+  padding-left: auto;
+  padding-right: auto;
+  padding-bottom: auto;
+
+  margin-top: auto;
+  margin-left: auto;
+  margin-bottom: auto;
+  margin-right: auto;
+
+  display: block;
 }
 
 meter,
